[package]
name = "padding-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

[dev-dependencies]
aes = "0.8.4"
cbc = "0.1.2"
